Changed returned format of the family tree endpoint
