# fam_tree_rest_api/api/openapi.yaml
@@ -117,16 +117,16 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /tree/{familyId}:
+  /tree/{username}:
     get:
       summary: Get a family tree by ID
       parameters:
         - in: path
-          name: familyId
+          name: username
           schema:
-            type: integer
+            type: string
           required: true
-          description: Numeric ID of the requested family
+          description: Username of the author of the requested family
       operationId: getTree
       tags:
         - relations
@@ -234,9 +234,10 @@ components:
     FamilyTreeRecord:
       type: object
       properties:
-        individual:
-          type: integer
-          format: int32
+        id:
+          type: string
+        gender:
+          type: string
         siblings:
           type: array
           $ref: "#/components/schemas/VecOfPreparedRelations"
@@ -257,9 +258,8 @@ components:
         type: object
         properties:
           id:
-            type: integer
-            format: int32
-          rel_type:
+            type: string
+          type:
             type: string
             $ref: "#/components/schemas/RelType"
 
